# django-backend-hugo

./: .envtemp  README.md  db.sqlite3  manage.py  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_is_draft.py  0003_post_created_on.py  0004_alter_post_created_on.py  0005_post_post_description_alter_post_title.py  0006_alter_post_post_description.py  0007_alter_post_post_description.py
blog/templates/: post_list.html
hugobackend/: asgi.py  settings.py  urls.py  wsgi.py
